--- a/twitter-frontend/package.json
+++ b/twitter-frontend/package.json
@@ -12,6 +12,7 @@
     "history": "^4.10.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-moment": "^0.9.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-toastify": "^5.5.0"
