--- a/twitter-frontend/package.json
+++ b/twitter-frontend/package.json
@@ -10,11 +10,12 @@
     "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
     "history": "^4.10.1",
+    "moment": "^2.24.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-moment": "^0.9.7",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
+    "react-scripts": "^3.4.0",
     "react-toastify": "^5.5.0"
   },
   "scripts": {
